--- a/src/components/layout/menu.module.scss
+++ b/src/components/layout/menu.module.scss
@@ -137,6 +137,12 @@
           padding: 1rem 2rem;
         }
       }
+      .icons {
+        display: flex;
+        justify-content: center;
+        min-width: 100vw;
+        height: 100%;
+      }
     }
 
     .burger_wrapper {
