--- a/src/components/shared/ColorMode.module.scss
+++ b/src/components/shared/ColorMode.module.scss
@@ -3,5 +3,5 @@
   width: fit-content;
   max-height: fit-content;
   line-height: 0;
-  padding: 5px;
+  padding: 15px;
 }
